--- a/app/application.css
+++ b/app/application.css
@@ -15,27 +15,50 @@ body {
   padding-top: 50px;
 }
 
+#mapwrapper {
+  overflow: hidden;
+  width: 100%;
+  height: 100%;
+  -webkit-transition: all 0.4s ease-out;
+  -moz-transition: all 0.4s ease-out;
+  transition: all 0.4s ease-out;
+  padding-left: 0;
+}
+
+#mapwrapper.show-sidebar {
+  padding-left: 450px;
+}
+
 #map {
   width: auto;
   height: 100%;
 }
 
 #infobar {
-  width: 450px;
+  z-index: 10;
+  width: 0px;
   height: 100%;
-  max-width: 100%;
+  left: 450px;
+  margin-left: -450px;
+  position: fixed;
   float: left;
+  overflow-y: scroll;
+  overflow-x: hidden;
   -webkit-transition: all 0.4s ease-out;
   -moz-transition: all 0.4s ease-out;
   transition: all 0.4s ease-out;
-  overflow-y: scroll;
-  overflow-x: hidden;
-  padding: 10px;
 }
 
-#infoBarHideButton {
-  z-index: 1;
-  position: relative;
+#infobar.show-sidebar {
+  width: 450px;
+  padding-left: 5px;
+}
+
+#infobar-slider {
+  float: left;
+  width: 15px;
+  height: 100%;
+  background-color: #aaaaaa;
 }
 
 .label-unknown {
