--- a/app/application.css
+++ b/app/application.css
@@ -19,9 +19,9 @@ body {
   overflow: hidden;
   width: 100%;
   height: 100%;
-  -webkit-transition: all 0.4s ease-out;
-  -moz-transition: all 0.4s ease-out;
-  transition: all 0.4s ease-out;
+  -webkit-transition: all 0.2s ease-out;
+  -moz-transition: all 0.2s ease-out;
+  transition: all 0.2s ease-out;
   padding-left: 0;
 }
 
@@ -44,14 +44,16 @@ body {
   float: left;
   overflow-y: scroll;
   overflow-x: hidden;
-  -webkit-transition: all 0.4s ease-out;
-  -moz-transition: all 0.4s ease-out;
-  transition: all 0.4s ease-out;
+  -webkit-transition: all 0.2s ease-out;
+  -moz-transition: all 0.2s ease-out;
+  transition: all 0.2s ease-out;
 }
 
 #infobar.show-sidebar {
   width: 450px;
   padding-left: 5px;
+  padding-top: 5px;
+  padding-right: 5px;
 }
 
 #infobar-slider {
@@ -103,5 +105,22 @@ body {
 @media screen and (min-width: 768px) {
   #mainNavBar.collapse {
     display: block !important;
+  }
+}
+
+@media screen and (max-device-width: 464px) {
+  #infobar.show-sidebar {
+    width: 100%;
+    padding-right: 25px;
+  }
+
+  #infobar-slider {
+    width: 25px;
+  }
+
+  #infobar-slider.show-sidebar {
+    position: absolute;
+    z-index: 11;
+    right: 0px;
   }
 }
