--- a/app/assets/templates/filter/view.html
+++ b/app/assets/templates/filter/view.html
@@ -25,7 +25,7 @@
 </label>
 </div>
 
-<accordion>
+<accordion id="filterAccordion">
 <accordion-group is-open="productFilterOpen">
   <accordion-heading>
     Filter Products<i class="pull-right glyphicon" ng-class="{'glyphicon-chevron-down': status.open, 'glyphicon-chevron-right': !status.open}"></i>
