--- a/app/styles/application.less
+++ b/app/styles/application.less
@@ -1,3 +1,5 @@
+@import url(http://fonts.googleapis.com/css?family=Rancho);
+
 html, body, #container {
   overflow: hidden;
   width: 100%;
@@ -6,6 +8,10 @@ html, body, #container {
 
 body {
   padding-top: 50px;
+}
+
+h1, h2, h3, h4, h5, h6 {
+  font-family: @font-family-monkey;
 }
 
 #mapwrapper {
@@ -30,7 +36,7 @@ body {
 #infobar {
   z-index: 10;
   width: 0px;
-  height: 90%;
+  height: 100%;
   left: 450px;
   margin-left: -450px;
   position: fixed;
@@ -57,6 +63,14 @@ body {
   cursor: pointer;
   text-align: center;
   background-color: @brand-success;
+}
+
+#filterAccordion .panel-title {
+  font-size: ceil((@font-size-base*1.4)); // ~24px
+}
+
+#filterAccordion .panel-body {
+  padding: 0;
 }
 
 .label-unknown {
@@ -98,6 +112,22 @@ body {
   content: "\e600";
 }
 
+.navbar-brand-img {
+  .navbar-brand;
+  padding: 5px 0px 5px 30px;
+}
+
+.navbar-brand {
+  font-family: @font-family-monkey;
+  font-size: ceil((@font-size-base*2)); // ~30px
+}
+
+.nav {
+  font-family: @font-family-monkey;
+  font-size: ceil((@font-size-base*1.7)); // ~24px
+}
+
+
 @media screen and (min-width: 768px) {
   #mainNavBar.collapse {
     display: block !important;
@@ -105,6 +135,10 @@ body {
 }
 
 @media screen and (max-device-width: 464px) {
+  .navbar-brand-img {
+    padding: 5px 0px 5px 5px;
+  }
+
   #infobar.show-sidebar {
     width: 100%;
     padding-right: 25px;
@@ -120,3 +154,5 @@ body {
     right: 0px;
   }
 }
+
+
