Fix Tooltip shift
See https://github.com/angular-ui/bootstrap/issues/2019

Signed-off-by: Maximilian Güntner <maximilian.guentner@gmail.com>

--- a/app/assets/templates/filter/view.html
+++ b/app/assets/templates/filter/view.html
@@ -1,26 +1,26 @@
 <div class="btn-group" role="group" style="margin-bottom: 5px">
-<label class="btn btn-default" ng-model="typeFilterModel.all" tooltip-placement="bottom" tooltip="Everything" btn-checkbox>
+<label class="btn btn-default" ng-model="typeFilterModel.all" tooltip-placement="bottom" tooltip="Everything" tooltip-append-to-body="true" btn-checkbox>
   <span class="glyphicon glyphicon-asterisk"></span>
 </label>
-<label class="btn btn-default" ng-model="typeFilterModel.retail" tooltip-placement="bottom" tooltip="Retail" btn-checkbox>
+<label class="btn btn-default" ng-model="typeFilterModel.retail" tooltip-placement="bottom" tooltip="Retail" tooltip-append-to-body="true" btn-checkbox>
   <span class="glyphicon glyphicon-shopping-cart"></span>
 </label>
-<label class="btn btn-default" ng-model="typeFilterModel.restaurant" tooltip-placement="bottom" tooltip="Restaurants" btn-checkbox>
+<label class="btn btn-default" ng-model="typeFilterModel.restaurant" tooltip-placement="bottom" tooltip="Restaurants" tooltip-append-to-body="true" btn-checkbox>
   <span class="glyphicon glyphicon-cutlery"></span>
 </label>
-<label class="btn btn-default" ng-model="typeFilterModel.bar" tooltip-placement="bottom" tooltip="Bars" btn-checkbox>
+<label class="btn btn-default" ng-model="typeFilterModel.bar" tooltip-placement="bottom" tooltip="Bars" tooltip-append-to-body="true" btn-checkbox>
   <span class="glyphicon glyphicon-glass"></span>
 </label>
-<label class="btn btn-default" ng-model="typeFilterModel.club" tooltip-placement="bottom" tooltip="Clubs" btn-checkbox>
+<label class="btn btn-default" ng-model="typeFilterModel.club" tooltip-placement="bottom" tooltip="Clubs" tooltip-append-to-body="true" btn-checkbox>
   <span class="glyphicon glyphicon-cd"></span>
 </label>
-<label class="btn btn-default" ng-model="typeFilterModel.community" tooltip-placement="bottom" tooltip="Community" btn-checkbox>
+<label class="btn btn-default" ng-model="typeFilterModel.community" tooltip-placement="bottom" tooltip="Community" tooltip-append-to-body="true" btn-checkbox>
   <span class="glyphicon glyphicon-user"></span>
 </label>
-<label class="btn btn-default" ng-model="typeFilterModel.hackerspace" tooltip-placement="bottom" tooltip="Hackerspaces" btn-checkbox>
+<label class="btn btn-default" ng-model="typeFilterModel.hackerspace" tooltip-placement="bottom" tooltip="Hackerspaces" tooltip-append-to-body="true" btn-checkbox>
   <span class="glyphicon icon-glider"></span>
 </label>
-<label class="btn btn-default" ng-model="typeFilterModel.other" tooltip-placement="bottom" tooltip="Other" btn-checkbox>
+<label class="btn btn-default" ng-model="typeFilterModel.other" tooltip-placement="bottom" tooltip="Other" tooltip-append-to-body="true" btn-checkbox>
   <span class="glyphicon glyphicon-info-sign"></span>
 </label>
 </div>
