Adding Twitter Account info
Signed-off-by: Maximilian Güntner <maximilian.guentner@gmail.com>

--- a/app/assets/templates/about/view.html
+++ b/app/assets/templates/about/view.html
@@ -23,6 +23,7 @@
     <p>
     <b>MateMonkey</b> is a project by <a href="http://www.sourcediver.org/">Maximilian Güntner</a>.
     If you have questions or feedback, you can reach me via <a href="mailto:info@matemonkey.com">email</a>.
+    You can also follow <a href="https://twitter.com/matemonkeycom">@matemonkeycom</a> on twitter for updates.
   </div>
 </div>
 
@@ -62,6 +63,7 @@
     <b>However</b> please don't consider the API public yet. I am still working on the frontend and some
     crucial details might change in the future and I don't want to increase the API version for that.
     Once the API is public, there will be documentation and a dedicated test platform for it.
+    Make sure to follow <a href="https://twitter.com/matemonkeycom">@matemonkeycom</a> on twitter for updates.
     </p>
 
     <p>
