Cafés should also go into category 'Bars'
Signed-off-by: Maximilian Güntner <maximilian.guentner@gmail.com>

--- a/app/assets/templates/filter/view.html
+++ b/app/assets/templates/filter/view.html
@@ -8,7 +8,7 @@
 <label class="btn btn-default" ng-model="typeFilterModel.restaurant" tooltip-placement="bottom" tooltip="Restaurants" tooltip-append-to-body="true" btn-checkbox>
   <span class="glyphicon glyphicon-cutlery"></span>
 </label>
-<label class="btn btn-default" ng-model="typeFilterModel.bar" tooltip-placement="bottom" tooltip="Bars" tooltip-append-to-body="true" btn-checkbox>
+<label class="btn btn-default" ng-model="typeFilterModel.bar" tooltip-placement="bottom" tooltip="Bars/Cafés" tooltip-append-to-body="true" btn-checkbox>
   <span class="glyphicon glyphicon-glass"></span>
 </label>
 <label class="btn btn-default" ng-model="typeFilterModel.club" tooltip-placement="bottom" tooltip="Clubs" tooltip-append-to-body="true" btn-checkbox>
