--- a/app/assets/templates/dealer/view.html
+++ b/app/assets/templates/dealer/view.html
@@ -33,29 +33,35 @@
 
     <h4>Stock</h4>
   </div>
-  <div>
+  <div ng-if="stock.length > 0">
     <table class="table table-striped">
       <tr ng-repeat="entry in stock">
-        <td ng-if="entry.status != 'discontinued' || showDiscontinued == true">
+        <td ng-if="entry.status != 'discontinued' || showDiscontinued.value == true">
           <b>{{entry.product.name}}</b>
         </td>
-        <td ng-if="entry.status != 'discontinued' || showDiscontinued == true">
+        <td ng-if="entry.status != 'discontinued' || showDiscontinued.value == true">
           <small ng-if="entry.price == '?'">{{entry.price}} / {{entry.quantity | capfirst}}</small>
           <small ng-if="entry.price != '?'">{{entry.price | div100 | isoCurrency:dealer.currency}} / {{entry.quantity | capfirst}}</small>
         </td>
-        <td ng-if="entry.status != 'discontinued' || showDiscontinued == true">
+        <td ng-if="entry.status != 'discontinued' || showDiscontinued.value == true">
           <span class="label label-{{entry.status}}">{{entry.status | capfirst}}</span>
         </td>
-        <td ng-if="entry.status != 'discontinued' || showDiscontinued == true">
+        <td ng-if="entry.status != 'discontinued' || showDiscontinued.value == true">
           <small>{{entry.created_at | date2 | relativeDate}}</small>
         </td>
       </tr>
     </table>
   </div>
+  <div ng-if="stock.length == 0">
+    <div class="nostock">
+      This dealer does not have any stock entries.<br>
+      You can add some using the Update button!
+    </div>
+  </div>
 
-  <div style="padding-bottom: 50px;">
+  <div ng-if="stock.length > 0" style="padding-bottom: 50px;">
     <label class="checkbox-inline">
-      <input type="checkbox" class="btn btn-primary btn-sm" ng-model="showDiscontinued" btn-checkbox btn-checkbox-true="true" btn-checkbox-false="false">
+      <input type="checkbox" class="btn btn-primary btn-sm" ng-checked="showDiscontinued.value" ng-model="showDiscontinued.value" btn-checkbox btn-checkbox-true="true" btn-checkbox-false="false">
       Display Discontinued Products
     </label>
   </div>
