--- a/app/styles/application.less
+++ b/app/styles/application.less
@@ -127,6 +127,10 @@ h1, h2, h3, h4, h5, h6 {
   font-size: ceil((@font-size-base*1.7)); // ~24px
 }
 
+.nostock {
+  font-family: @font-family-monkey;
+  font-size: ceil((@font-size-base*1.7)); // ~24px
+}
 
 @media screen and (min-width: 768px) {
   #mainNavBar.collapse {
