API is documented / test API
Signed-off-by: Maximilian Güntner <maximilian.guentner@gmail.com>

--- a/app/assets/templates/about/view.html
+++ b/app/assets/templates/about/view.html
@@ -60,20 +60,21 @@
     <b>Is there a (public) API?</b><br>
     Well, since this the frontend is written using pure <a href="https://www.angularjs.org/">AngularJS</a> a
     <a href="http://www.padrinorb.com/">Padrino</a> JSON Backend handles all the data.
-    <b>However</b> please don't consider the API public yet. I am still working on the frontend and some
-    crucial details might change in the future and I don't want to increase the API version for that.
-    Once the API is public, there will be documentation and a dedicated test platform for it.
-    Make sure to follow <a href="https://twitter.com/matemonkeycom">@matemonkeycom</a> on twitter for updates.
+    You can find documentation for the API on <a href="https://github.com/MateMonkey/api">GitHub</a>.
+    There is also a dedicated test platform for you to test your scripts/apps running at
+    <a href="http://playground.matemonkey.com">http://playground.matemonkey.com</a>.
+    The API can be considered final, <b>however</b> some details might still change in the future
+    (see the documentation for more information).
     </p>
 
     <p>
     <b>Is there a test API so I can test my ruby script that runs on my IoT refrigerator?</b><br>
-    Not yet. (see above)
+    <a href="http://playground.matemonkey.com">Yes!</a>. (see above)
     </p>
 
     <p>
     <b>Is there an app for it?</b><br>
-    No. But since the API will be public, I encourage you to write one!
+    Not yet, but I encourage you to write one!
     </p>
 
   </div>
