Improved marker cluster handling
Signed-off-by: Maximilian Güntner <maximilian.guentner@gmail.com>

--- a/app/styles/bootstrap.less
+++ b/app/styles/bootstrap.less
@@ -52,3 +52,4 @@
 @import "/bower_components/bootstrap/less/responsive-utilities.less";
 
 @import "application.less";
+@import "MarkerCluster.MateMonkey.less";
