--- a/app/assets/templates/changes/view.html
+++ b/app/assets/templates/changes/view.html
@@ -5,6 +5,7 @@
     <tr ng-repeat='change in changes'>
       <td>{{change.type | translate}}</td>
       <td>{{change.dealer_name}}</td>
+      <td>{{change.address_summary}}</td>
       <td><span tooltip="{{change.timestamp}}">{{change.timestamp | date2 | relativeDate }}</span></td>
       <td><a href="http://matemonkey.com/map/dealer/{{change.slug}}">Go to Dealer</a></td>
     </tr>
