css class cleanup for text content
Signed-off-by: Maximilian Güntner <maximilian.guentner@gmail.com>

--- a/app/assets/templates/about/view.html
+++ b/app/assets/templates/about/view.html
@@ -1,4 +1,4 @@
-<div style="margin-left: 100px; height: 100%; overflow-y:auto; overflow-x:hidden" class"container">
+<div class="text-content" style="overflow-y:auto">
 
 <h1>About MateMonkey</h1>
 
