--- a/app/assets/templates/changes/view.html
+++ b/app/assets/templates/changes/view.html
@@ -1,4 +1,4 @@
-<div style="margin-left: 100px; height: 100%" class"container">
+<div class="text-content">
 <h1>Recent Changes</h1>
 <div style="overflow-y:auto; height: 90%">
   <table class="table table-striped" infinite-scroll-parent='true' infinite-scroll='loadMore()' infinite-scroll-distance='2'>
