--- a/app/assets/templates/legal/view.html
+++ b/app/assets/templates/legal/view.html
@@ -1,4 +1,4 @@
-<div style="margin-left: 100px; height: 100%; overflow-y:auto; overflow-x:hidden" class"container">
+<div class="text-content" style="overflow-y:auto">
 
 <h1>Imprint / Legal stuff</h1>
 
