Updated opensource paragraph
Signed-off-by: Maximilian Güntner <maximilian.guentner@gmail.com>

--- a/app/assets/templates/about/view.html
+++ b/app/assets/templates/about/view.html
@@ -50,10 +50,9 @@
   <div class="col-md-1"><h3>How?</h3></div>
   <div class="col-md-4">
     <p>
-    <b>Will MateMonkey be opensource?</b><br>
-    I haven't decided yet whether the project as a whole will be opensource. I plan to make the frontend
-    opensource and put it on <a href="https://github.com/mguentner">GitHub</a> once I am statisfied with
-    the sourcecode.
+    <b>Is MateMonkey opensource?</b><br>
+    Yes, the frontend is fully opensource. Fork the project <a href="https://github.com/MateMonkey/frontend">on github</a> and
+    send pull requests to contribute!
     </p>
 
     <p>
