--- a/app/assets/templates/dealer/update_stock.html
+++ b/app/assets/templates/dealer/update_stock.html
@@ -29,7 +29,7 @@
         <select class="form-control" ng-model="stock.quantity" ng-options="quantity.value as quantity.displayText for quantity in quantityOptions">
         </select>
       </div>
-    <label class="col-sm-2 control-label" tooltip="Is this a special offer?">
+    <label class="col-sm-2 control-label" uib-tooltip="Is this a special offer?">
       <input type="checkbox" ng-model="stock.special"> Special?
     </label>
   </div>
