--- a/app/assets/templates/dealer/view.html
+++ b/app/assets/templates/dealer/view.html
@@ -61,7 +61,7 @@
 
   <div ng-if="stock.length > 0" style="padding-bottom: 50px;">
     <label class="checkbox-inline">
-      <input type="checkbox" class="btn btn-primary btn-sm" ng-checked="showDiscontinued.value" ng-model="showDiscontinued.value" btn-checkbox btn-checkbox-true="true" btn-checkbox-false="false">
+      <input type="checkbox" class="btn btn-primary btn-sm" ng-checked="showDiscontinued.value" ng-model="showDiscontinued.value" uib-btn-checkbox uib-btn-checkbox-true="true" uib-btn-checkbox-false="false">
       Display Discontinued Products
     </label>
   </div>
