--- a/app/assets/templates/dealer/view.html
+++ b/app/assets/templates/dealer/view.html
@@ -5,6 +5,14 @@
         <span class="glyphicon glyphicon-pencil" aria-hidden="true"></span>
         Edit
       </button>
+      <button class="btn btn-primary btn-sm" ng-click="showUpdateStock()">
+        <span class="glyphicon glyphicon-heart" aria-hidden="true"></span>
+        Update
+      </button>
+      <button class="btn btn-primary btn-sm" ng-click="showLocationSetter()">
+        <span class="glyphicon glyphicon-screenshot" aria-hidden="true"></span>
+        Correct Position
+      </button>
     </div>
     <div>
       <h3>{{dealer.name}}  <small>{{dealer.type | capfirst}}</small></h3>
@@ -24,13 +32,6 @@
   <h4>Note</h4>
   <p>{{dealer.note}}</p>
   <div style="margin-bottom: 15px">
-    <div class="pull-right">
-      <button class="btn btn-primary btn-sm" ng-click="showUpdateStock()">
-        <span class="glyphicon glyphicon-heart" aria-hidden="true"></span>
-        Update
-      </button>
-    </div>
-
     <h4>Stock</h4>
   </div>
   <div ng-if="stock.length > 0">
