--- a/app/styles/application.less
+++ b/app/styles/application.less
@@ -1,4 +1,4 @@
-@import url(http://fonts.googleapis.com/css?family=Rancho);
+@import url(https://fonts.googleapis.com/css?family=Rancho);
 
 html, body, #container {
   overflow: hidden;
