--- a/app/styles/application.less
+++ b/app/styles/application.less
@@ -138,9 +138,13 @@ h1, h2, h3, h4, h5, h6 {
   }
 }
 
-@media screen and (max-device-width: 464px) {
+@media screen and (max-width: 464px) {
   .navbar-brand-img {
     padding: 5px 0px 5px 5px;
+  }
+
+  .add-button-label {
+    display: none;
   }
 
   #infobar.show-sidebar {
