added "Links" page, added background image
Signed-off-by: Maximilian Güntner <maximilian.guentner@gmail.com>

--- a/app/styles/application.less
+++ b/app/styles/application.less
@@ -163,6 +163,18 @@ h1, h2, h3, h4, h5, h6 {
   }
 }
 
+.matemonkey_background {
+  position: fixed;
+  z-index: -1;
+  left: 42px;
+  top: 84px;
+  width: 512px;
+  height: 100%;
+  background-image: url("/css/images/matemonkey_inverted.png");
+  background-repeat: no-repeat;
+  filter: blur(1px) opacity(15%);
+}
+
 .text-content {
   margin-left: 5%;
   height: 100%;
