--- a/app/assets/templates/links/view.html
+++ b/app/assets/templates/links/view.html
@@ -26,7 +26,7 @@ send me an email or open an issue on <a href="https://github.com/MateMonkey/fron
     <th>Link</th>
   </tr>
   <tr>
-    <td><b>mate-tee.de</b></td>
+    <td><b>Delicatino / mate-tee.de</b></td>
     <td>german online-shop with a very wide range of yerba mate brands and accessories</td>
     <td><a href="http://www.mate-tee.de/" target="_blank">www.mate-tee.de</a></td>
   </tr>
