--- a/app/assets/templates/links/view.html
+++ b/app/assets/templates/links/view.html
@@ -7,7 +7,7 @@ This page is for general links about Yerba Mate and selected<br>
 shops that sell accessories like cuias and bombillas.
 </p>
 <p>
-If you own a shop or know one should be appear on this page,<br>
+If you own a shop or know one that should be on this page,<br>
 send me an email or open an issue on <a href="https://github.com/MateMonkey/frontend/issues">GitHub</a>.
 </p>
 
