update legal view

--- a/app/assets/templates/legal/view.html
+++ b/app/assets/templates/legal/view.html
@@ -7,8 +7,8 @@ Angaben gemäß § 5 TMG:
 
 <h2>Kontakt</h2>
 Maximilian Güntner<br>
-Kederbacherstraße 27<br>
-81377 München<br><br>
+Edlingerplatz 2a<br>
+81543 München<br><br>
 
 E-Mail: admin@matemonkey.com
 
@@ -33,9 +33,4 @@ Original data provided by <a href="https://www.pascalj.de/">Pascal Jungblut</a>.
 </p>
 
 Both services (1) and (2) use data provided by <a href="http://openstreetmap.org">OpenStreetMap</a>, © OpenStreetMap contributors.
-
-
-
 </div>
-
-
