update about view, fix tile URL for update position dialog

--- a/app/assets/templates/about/view.html
+++ b/app/assets/templates/about/view.html
@@ -19,16 +19,6 @@
 </div>
 
 <div class="row">
-  <div class="col-md-1"><h3>Who?</h3></div>
-  <div class="col-md-4">
-    <p>
-    <b>MateMonkey</b> is a project by <a href="http://www.sourcediver.org/">Maximilian Güntner</a>.
-    If you have questions or feedback, you can reach me via <a href="mailto:info@matemonkey.com">email</a>.
-    You can also follow <a href="https://twitter.com/matemonkeycom">@matemonkeycom</a> on twitter for updates.
-  </div>
-</div>
-
-<div class="row">
   <div class="col-md-1"><h3>What?</h3></div>
   <div class="col-md-4">
     <p>
@@ -48,36 +38,34 @@
 </div>
 
 <div class="row">
-  <div class="col-md-1"><h3>How?</h3></div>
+  <div class="col-md-1"><h3>More</h3></div>
   <div class="col-md-4">
     <p>
-    <b>Is MateMonkey opensource?</b><br>
-    Yes, the frontend is fully opensource. Fork the project <a href="https://github.com/MateMonkey/frontend">on github</a> and
+    <b>MateMonkey is opensource!</b><br>
+    The frontend is fully opensource. Fork the project <a href="https://github.com/MateMonkey/frontend">on github</a> and
     send pull requests to contribute!
     </p>
 
     <p>
-    <b>Is there a (public) API?</b><br>
-    Well, since this the frontend is written using pure <a href="https://www.angularjs.org/">AngularJS</a> a
+    <b>The API is documented</b><br>
+    The frontend is written using pure <a href="https://www.angularjs.org/">AngularJS</a> and a
     <a href="http://www.padrinorb.com/">Padrino</a> JSON Backend handles all the data.
     You can find documentation for the API on <a href="https://github.com/MateMonkey/api">GitHub</a>.
-    There is also a dedicated test platform for you to test your scripts/apps running at
-    <a href="http://playground.matemonkey.com">http://playground.matemonkey.com</a>.
-    The API can be considered final, <b>however</b> some details might still change in the future
-    (see the documentation for more information).
-    </p>
-
-    <p>
-    <b>Is there a test API so I can test my ruby script that runs on my IoT refrigerator?</b><br>
-    <a href="http://playground.matemonkey.com">Yes!</a>. (see above)
-    </p>
-
-    <p>
-    <b>Is there an app for it?</b><br>
-    Not yet, but I encourage you to write one!
+    The API can be considered final.
+    The test API is no longer offline..
     </p>
 
   </div>
+</div>
+
+<div class="row">
+    <div class="col-md-1"><h3>Who?</h3></div>
+    <div class="col-md-4">
+        <p>
+            <b>MateMonkey</b> is a project by <a href="http://www.sourcediver.org/">Maximilian Güntner</a>.
+            If you have questions or feedback, you can reach me via <a href="mailto:info@matemonkey.com">email</a>.
+            You can also follow <a href="https://twitter.com/matemonkeycom">@matemonkeycom</a> on twitter for updates.
+    </div>
 </div>
 </div>
 
